# rust-worker-poc

./: .gitignore  Cargo.toml  package-lock.json  rustfmt.toml  wrangler.toml
.github/workflows/: deploy.yml
apps/worker-rust/: Cargo.toml  package-lock.json  package.json
apps/worker-rust/src/: lib.rs
src/: common.rs  lib.rs
src/common/: api_error.rs  api_response.rs
