[package]
name = "worker-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.2.0", features=['http', 'axum'] }
worker-macros = { version="0.2.0", features=['http'] }
axum  = { version = "0.7.0", default-features = false }
tower-service = "0.3.2"
console_error_panic_hook = { version = "0.1.1" }
wasm-bindgen-futures = "0.4.42"

[profile.release]
opt-level = "s" # optimize for size in release builds
lto = true
strip = true
codegen-units = 1
