[package]
name = "worker-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.4.2", features=['http', 'axum'] }
worker-build = { version="0.1.1" }
worker-macros = { version="0.4.2", features=['http'] }
tower-service = "0.3.3"
console_error_panic_hook = { version = "0.1.7" }
wasm-bindgen-futures = "0.4.45"
axum = { version = "0.7.9", default-features = false, features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
utoipa = { version = "5.2.0" }
utoipauto = { version = "0.2.0" }
common = { path = "../../crates/common" }

[profile.release]
opt-level = "s" # optimize for size in release builds
lto = true
strip = true
codegen-units = 1
